--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ env:
    -  ciserver=true
 
 before_install:
+   - wget http://mirrors.ae-online.de/apache/maven/maven-3/3.1.1/binaries/apache-maven-3.1.1-bin.zip
+   - unzip -u apache-maven-3.1.1-bin.zip -d /tmp
+   - export M2_HOME=/tmp/apache-maven-3.1.1/
    - mvn clean
 
 script:
