--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
    - wget http://mirrors.ae-online.de/apache/maven/maven-3/3.1.1/binaries/apache-maven-3.1.1-bin.zip
    - unzip -u apache-maven-3.1.1-bin.zip -d /tmp
    - export M2_HOME=/tmp/apache-maven-3.1.1/
+   - echo $M2_HOME
    - mvn clean
 
 script:
