--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,8 @@ before_install:
    - wget http://mirrors.ae-online.de/apache/maven/maven-3/3.1.1/binaries/apache-maven-3.1.1-bin.zip
    - unzip -u apache-maven-3.1.1-bin.zip -d /tmp
    - export M2_HOME=/tmp/apache-maven-3.1.1/
-   - echo $M2_HOME
-   - mvn clean
 
 script:
-   - mvn install
+   - echo $M2_HOME
+   - $M2_HOME/bin/mvn clean install
 
