--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,14 @@ jdk:
 
 env:
    -  ciserver=true
+   -  M2_HOME=/tmp/apache-maven-3.1.1
 
 install:
    - wget http://mirrors.ae-online.de/apache/maven/maven-3/3.1.1/binaries/apache-maven-3.1.1-bin.zip
    - unzip -u apache-maven-3.1.1-bin.zip -d /tmp
-   - export M2_HOME=/tmp/apache-maven-3.1.1/
 
 script:
    - echo $M2_HOME
+   - $M2_HOME/bin/mvn -version
    - $M2_HOME/bin/mvn clean install
 
