--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ jdk:
     - openjdk7
 
 env:
-   -  ciserver=true
    -  M2_HOME=/tmp/apache-maven-3.1.1
 
 install:
@@ -14,6 +13,6 @@ install:
 
 script:
    - echo $M2_HOME
-   - $M2_HOME/bin/mvn -version
-   - $M2_HOME/bin/mvn clean install
+   - /tmp/apache-maven-3.1.1/bin/mvn -version
+   - /tmp/apache-maven-3.1.1/bin/mvn clean install
 
