--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,9 @@ env:
    -  M2_HOME=/tmp/apache-maven-3.1.1
 
 install:
-   - wget http://mirrors.ae-online.de/apache/maven/maven-3/3.1.1/binaries/apache-maven-3.1.1-bin.zip
-   - unzip -u apache-maven-3.1.1-bin.zip -d /tmp
+   - sudo apt-get install maven=3.1.1
 
 script:
-   - echo $M2_HOME
-   - /tmp/apache-maven-3.1.1/bin/mvn -version
-   - /tmp/apache-maven-3.1.1/bin/mvn clean install
+   - mvn -version
+   - mvn clean install
 
