changed to maven 3.2.5 and forge 2.16.0
Signed-off-by: Thomas Schubert <funthomas424242@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,11 @@ jdk:
     - openjdk7
 
 env:
-   -  M2_HOME=/tmp/apache-maven-3.1.1
+   - ciserver=1
 
 install:
-   - sudo apt-get install maven=3.1
+   - mvn -version
 
 script:
-   - mvn -version
    - mvn clean install
 
