--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 
 
 	<properties>
-		<version.forge>2.13.0.Final</version.forge>
-		<maven.version>[3.1.1]</maven.version>
+		<version.forge>2.16.0.Final</version.forge>
+		<maven.version>3.2.5</maven.version>
 	</properties>
 
 
@@ -18,9 +18,28 @@
 		<maven>${maven.version}</maven>
 	</prerequisites>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>artifactory</id>
+			<url>http://mvnrepository.com/artifact/</url>
+		</pluginRepository>
+	</pluginRepositories>
 
+	<repositories>
+		<repository>
+			<id>artifactory</id>
+			<url>http://mvnrepository.com/artifact/</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
+	<!--  -->
+		<dependency>
+			<groupId>org.jboss.forge.addon</groupId>
+			<artifactId>ui</artifactId>
+			<version>2.16.0.Final</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.jboss.forge.furnace</groupId>
 			<artifactId>furnace-se</artifactId>
@@ -45,6 +64,7 @@
 			<groupId>org.jboss.forge.addon</groupId>
 			<artifactId>parser-java-api</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.jboss.forge.addon</groupId>
 			<artifactId>resources-api</artifactId>
@@ -55,6 +75,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 	</dependencies>
 
 	<build>
