--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,12 @@
 	</repositories>
 
 	<dependencies>
-	<!--  -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.jboss.forge.addon</groupId>
 			<artifactId>ui</artifactId>
